tests/ui/fn_as_param.stderr
error: mismatch types
    ╭─[tests/ui/fn_as_param.ina:10:7]
    │
 10 │     f(g);
    │       ┬
    │       ╰─ expected `fn() -> ()`, found `fn(i32) -> ()`
    ∙
────╯
